# TBCaptial

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.txt  ENVIRONMENT_ACCEPTANCE.md  Makefile  OPERATIONS.md  PLAN.md  PLAN_LATEST.md  README.md  environment.yml  pyproject.toml
scripts/: activate_conda_env.sh  create_conda_env.sh  download_akshare_complete.py  download_akshare_complete.sh  download_akshare_data.py  download_akshare_data.sh  init_submodules.sh  install_akquant_backend.sh  preview_akshare_data.py  preview_akshare_data.sh  run_factor_backtests.py  run_factor_backtests.sh  summarize_akshare_data.py  summarize_akshare_data.sh  verify_akshare_download.py  verify_akshare_download.sh  verify_conda_env.py
src/tbcaptial/: __init__.py
src/tbcaptial/backtest/: __init__.py  akquant_backend.py
src/tbcaptial/research/: __init__.py  raw_data.py  reporting.py  strategies.py  suite.py
tests/backtest/: test_akquant_backend.py  test_akquant_china_market.py
tests/data/: test_akshare_scripts.py
tests/research/: test_factor_research.py
