[build-system]
requires = ["setuptools>=75", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "tbcaptial"
version = "0.0.0"
description = "A local-first A-share quantitative research and backtesting system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
